// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ActivityIndicator prop "animating" is "false" 1`] = `
<View
  accessibilityRole="progressbar"
  aria-valuemax="1"
  aria-valuemin="0"
  style={
    Array [
      15,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        19,
        17,
        18,
        16,
      ]
    }
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        strokeWidth="4"
        style={
          Object {
            "opacity": 0.2,
            "stroke": "#1976D2",
          }
        }
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        strokeWidth="4"
        style={
          Object {
            "stroke": "#1976D2",
            "strokeDasharray": 80,
            "strokeDashoffset": 60,
          }
        }
      />
    </svg>
  </View>
</View>
`;

exports[`components/ActivityIndicator prop "animating" is "true" 1`] = `
<View
  accessibilityRole="progressbar"
  aria-valuemax="1"
  aria-valuemin="0"
  style={
    Array [
      15,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        19,
        17,
        false,
        false,
      ]
    }
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        strokeWidth="4"
        style={
          Object {
            "opacity": 0.2,
            "stroke": "#1976D2",
          }
        }
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        strokeWidth="4"
        style={
          Object {
            "stroke": "#1976D2",
            "strokeDasharray": 80,
            "strokeDashoffset": 60,
          }
        }
      />
    </svg>
  </View>
</View>
`;

exports[`components/ActivityIndicator prop "color" 1`] = `
<svg
  height="100%"
  viewBox="0 0 32 32"
  width="100%"
>
  <circle
    cx="16"
    cy="16"
    fill="none"
    r="14"
    strokeWidth="4"
    style={
      Object {
        "opacity": 0.2,
        "stroke": "red",
      }
    }
  />
  <circle
    cx="16"
    cy="16"
    fill="none"
    r="14"
    strokeWidth="4"
    style={
      Object {
        "stroke": "red",
        "strokeDasharray": 80,
        "strokeDashoffset": 60,
      }
    }
  />
</svg>
`;

exports[`components/ActivityIndicator prop "hidesWhenStopped" is "false" 1`] = `
<View
  accessibilityRole="progressbar"
  aria-valuemax="1"
  aria-valuemin="0"
  style={
    Array [
      15,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        19,
        17,
        18,
        false,
      ]
    }
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        strokeWidth="4"
        style={
          Object {
            "opacity": 0.2,
            "stroke": "#1976D2",
          }
        }
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        strokeWidth="4"
        style={
          Object {
            "stroke": "#1976D2",
            "strokeDasharray": 80,
            "strokeDashoffset": 60,
          }
        }
      />
    </svg>
  </View>
</View>
`;

exports[`components/ActivityIndicator prop "hidesWhenStopped" is "true" 1`] = `
<View
  accessibilityRole="progressbar"
  aria-valuemax="1"
  aria-valuemin="0"
  style={
    Array [
      15,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        19,
        17,
        18,
        16,
      ]
    }
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        strokeWidth="4"
        style={
          Object {
            "opacity": 0.2,
            "stroke": "#1976D2",
          }
        }
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        strokeWidth="4"
        style={
          Object {
            "stroke": "#1976D2",
            "strokeDasharray": 80,
            "strokeDashoffset": 60,
          }
        }
      />
    </svg>
  </View>
</View>
`;

exports[`components/ActivityIndicator prop "size" is "large" 1`] = `
<View
  accessibilityRole="progressbar"
  aria-valuemax="1"
  aria-valuemin="0"
  style={
    Array [
      15,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        20,
        17,
        false,
        false,
      ]
    }
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        strokeWidth="4"
        style={
          Object {
            "opacity": 0.2,
            "stroke": "#1976D2",
          }
        }
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        strokeWidth="4"
        style={
          Object {
            "stroke": "#1976D2",
            "strokeDasharray": 80,
            "strokeDashoffset": 60,
          }
        }
      />
    </svg>
  </View>
</View>
`;

exports[`components/ActivityIndicator prop "size" is a number 1`] = `
<View
  accessibilityRole="progressbar"
  aria-valuemax="1"
  aria-valuemin="0"
  style={
    Array [
      15,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "height": 30,
          "width": 30,
        },
        17,
        false,
        false,
      ]
    }
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        strokeWidth="4"
        style={
          Object {
            "opacity": 0.2,
            "stroke": "#1976D2",
          }
        }
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        strokeWidth="4"
        style={
          Object {
            "stroke": "#1976D2",
            "strokeDasharray": 80,
            "strokeDashoffset": 60,
          }
        }
      />
    </svg>
  </View>
</View>
`;
